@@ -3,8 +3,11 @@ postgresql-common (35) unstable; urgency=low
   * pg_ctlcluster: If the socket already responds, but connections fail
     several times in a row, give the postmaster some more time (5s) to
     actually accept connections.
+  * t/060_obsolete_confparams.t: Start with a full configuration file for
+    every tested version, instead of just upgrading the previously upgraded
+    version. This gives an exhaustive check for obsolete parameters.
 
- -- Martin Pitt <mpitt@debian.org>  Tue, 22 Nov 2005 23:03:14 +0100
+ -- Martin Pitt <mpitt@debian.org>  Tue, 22 Nov 2005 23:09:20 +0100
 
 postgresql-common (34) unstable; urgency=low
 
